fixed spacing between nav bar and content

--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -67,7 +67,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 50px;
+  height: 5%;
   background-color: #363639;
   border-bottom: 1px solid #424244;
 }
